--- a/posts/templates/posts/index.html
+++ b/posts/templates/posts/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load humanize %}
+{% load omfilters %}
 {% block titulo %} Blog do Martin {% endblock %}
 {% block conteudo %}
 <!-- CONTENT -->
@@ -24,7 +25,7 @@
                         <p class="card-text">
                             <small class="text-muted">{{ post.data_post|naturalday|title }}
                                 |
-                                {{ post.numero_comentarios }} comentário(s)
+                                {{ post.numero_comentarios|plural_comentarios }}
                                 |
                                 {{ post.categoria_post }}</small>
                         </p>
